--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ book:
   date: today
   chapters:
     - index.qmd
+    - calendar.qmd
     - fruit-veg-herbs.qmd
     - indoor.qmd
     - outdoor.qmd
